Task 3 and Task 4 commit

--- a/craw_linkedin.ipynb
+++ b/craw_linkedin.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.keys import Keys\n",
-    "\n",
+    "from selenium.webdriver import Chrome \n",
+    "from bs4 import BeautifulSoup\n",
     "from time import sleep"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,51 +30,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "#Import username and password\n",
     "credential = open('login_credential.txt')\n",
-    "line = credential.readline()\n",
-    "print(line)\n",
-    "#username = line[0] \n",
-    "#password = line[1]"
+    "line = credential.readlines()\n",
+    "username = line[0]\n",
+    "password = line[1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-22-4ebb82ac63b8>:1: DeprecationWarning: find_element_by_* commands are deprecated. Please use find_element() instead\n",
+      "<ipython-input-4-dab82e5e0103>:2: DeprecationWarning: find_element_by_* commands are deprecated. Please use find_element() instead\n",
       "  email_field = driver.find_element_by_id('username')\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'username' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-22-4ebb82ac63b8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0memail_field\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdriver\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind_element_by_id\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'username'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0memail_field\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msend_keys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0musername\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'username' is not defined"
      ]
     }
    ],
    "source": [
+    "#Key in username\n",
     "email_field = driver.find_element_by_id('username')\n",
     "email_field.send_keys(username)\n",
     "sleep(3)   "
@@ -81,19 +64,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-67-11cb4153a511>:1: DeprecationWarning: find_element_by_* commands are deprecated. Please use find_element() instead\n",
+      "<ipython-input-5-3c3b52ae55a5>:2: DeprecationWarning: find_element_by_* commands are deprecated. Please use find_element() instead\n",
       "  password_field = driver.find_element_by_name('session_password')\n"
      ]
     }
    ],
    "source": [
+    "#Key in password\n",
     "password_field = driver.find_element_by_name('session_password')\n",
     "password_field.send_keys(password)\n",
     "sleep(2)"
@@ -101,23 +85,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-68-236e8f2cacfb>:1: DeprecationWarning: find_element_by_* commands are deprecated. Please use find_element() instead\n",
+      "<ipython-input-6-570ad08f6177>:2: DeprecationWarning: find_element_by_* commands are deprecated. Please use find_element() instead\n",
       "  login_field = driver.find_element_by_xpath('//*[@id=\"organic-div\"]/form/div[3]/button')\n"
      ]
     }
    ],
    "source": [
+    "#Click login Buttom\n",
     "login_field = driver.find_element_by_xpath('//*[@id=\"organic-div\"]/form/div[3]/button')\n",
     "login_field.click()\n",
     "sleep(3)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-11-1cc03d8455da>:6: DeprecationWarning: find_element_by_* commands are deprecated. Please use find_element() instead\n",
+      "  search_field = driver.find_element_by_xpath('//*[@id=\"global-nav-typeahead\"]/input')\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "What profile do you want to search python analyst job\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-- Finish searching....\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Step 2: Search for the profile we want to crawl\n",
+    "\n",
+    "# Locate the search bar element\n",
+    "# Input the search query to the search bar\n",
+    "\n",
+    "search_field = driver.find_element_by_xpath('//*[@id=\"global-nav-typeahead\"]/input')\n",
+    "search_query = input('What profile do you want to search')\n",
+    "search_field.send_keys(search_query)\n",
+    "\n",
+    "# Search\n",
+    "search_field.send_keys(Keys.RETURN)\n",
+    "print('-- Finish searching....')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Step 3: Scrap the URLs of the profiles\n",
+    "\n",
+    "page_source = BeautifulSoup(driver.page_source)\n",
+    "profiles = page_source.findAll('a', class_ ='disabled ember-view job-card-container__link job-card-list__title')\n",
+    "print(profiles)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -125,7 +181,7 @@
    "hash": "beb4f305451b4835b36a63cb1c75e625a7251cf8d76b65be2f5856eee68cb551"
   },
   "kernelspec": {
-   "display_name": "Python 2.7.10 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -140,9 +196,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.8"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
